fix to hamburger menu issue on mobiles

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -510,7 +510,7 @@ main {
         font-size: 2rem;
         color: yellowgreen;
         cursor: pointer;
-        z-index: 1000;
+        z-index: 2000;
         margin-left: auto; /* optional: right-align */
     }
 
